Tile Map array overhaul